<resources>
    <string-array name="languages">
        <item>English</item>
        <item>Polish</item>
    </string-array>

    <string name="app_name">MusiCo</string>
    <string name="lastfm_user_icon">LastFM user icon</string>
    <string name="user_since">Since %s</string>
    <string name="user_played">Played %d songs</string>
    <string name="album_cover">Album cover art</string>
    <string name="album_artist">Artist</string>
    <string name="album_title">Title</string>
    <string name="album_year">Year</string>
    <string name="album_genre">Genre</string>
    <string name="album_store">Store of purchase</string>
    <string name="album_price">Price</string>
    <string name="album_date">Date of purchase</string>
    <string name="album_parse">Lookup</string>
    <string name="album_okay">Add album</string>
    <string name="track_id">%d.</string>
    <string name="edit_album">Edit album</string>
    <string name="add_album">Add album</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_lastfm">Last.fm</string>
    <string name="tab_stats">Statistics</string>
    <string name="scan_cancel">Cancelled</string>
    <string name="scan_error">Album not found</string>
    <string name="text_album">Album</string>
    <string name="album_currency">Currency</string>
    <string name="menu_edit">Edit album</string>
    <string name="menu_delete">Delete album</string>
    <string name="menu_sort_title">Sort by</string>
    <string name="sort_album">Album title</string>
    <string name="sort_artist">Artist</string>
    <string name="sort_year">Year of release</string>
    <string name="sort_date">Date of purchase</string>
    <string name="sort_price">Price</string>
    <string name="text_clear">Clear</string>
    <string name="error_empty">This field cannot be empty</string>
    <string name="error_year_range">The year must be in range [1900; %4d]</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_deletion_ok">Delete</string>
    <string name="dialog_deletion_msg">Are you sure you want to delete the album \"%s\"?</string>
    <string name="view_album">View album</string>
    <string name="button_settings">Settings</string>
    <string name="error_currency">Invalid currency</string>
    <string name="label_lastfm_username">Last.fm username</string>
    <string name="label_language">Choose language</string>
    <string name="dialog_save">Save</string>
    <string name="title_settings">Settings</string>
    <string name="lang_change">Change language</string>
    <string name="msg_album_add">Album added</string>
    <string name="msg_album_delete">Album deleted</string>
    <string name="msg_album_edit">Changes saved</string>
    <string name="error_generic">An error has occurred</string>
    <string name="now_playing">Now playing…</string>
    <string name="artist_played">%d plays</string>
    <string name="button_refresh">Refresh</string>
    <string name="msg_refresh">Refreshed</string>
    <string name="label_top_artists">Top artists</string>
    <string name="label_recent_tracks">Recent tracks</string>
    <string name="stat_album_count">All albums</string>
    <string name="stat_artist_count">All artists</string>
    <string name="stat_money_total">Total of money spent</string>
    <string name="stat_album_oldest">Oldest album</string>
    <string name="stat_album_newest">Newest album</string>
    <string name="stat_popular_artist">The most popular artist</string>
    <string name="stat_popular_genre">The most popular genre</string>
    <string name="stat_song_count">All songs</string>
    <string name="stat_album_expensive">The most expensive album</string>
    <string name="stat_album_cheapest">The cheapest album</string>
    <string name="stat_one_year_count">Most albums bought in one year</string>
    <string name="stat_total_length">Total length</string>
    <string name="stat_artist_expensive">The most expensive artist</string>
    <string name="stat_artist_cheapest">The cheapest artist</string>
    <string name="stat_store_count">All stores</string>
    <string name="stat_store_total">The most money spent in one store</string>
    <string name="stat_avg_price">Average price of the album</string>
    <string name="stat_store_economical">The most economical store</string>
    <string name="stat_album_recent">The most recent purchase</string>
</resources>
