<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
android:focusable="true"
android:focusableInTouchMode="true"
tools:context=".AlbumView"
android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_album"
        tools:context=".AlbumView">

        <View
            android:id="@+id/album_mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="#808080"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/et_album_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/album_title"
            android:inputType="textCapWords"
            android:nextFocusLeft="@+id/et_album_currency"
            android:nextFocusRight="@+id/et_album_artist"
            android:nextFocusUp="@+id/et_album_currency"
            android:nextFocusDown="@+id/et_album_artist"
            android:nextFocusForward="@+id/et_album_artist"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_album_cover"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/et_album_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/album_artist"
            android:inputType="textCapWords"
            android:nextFocusLeft="@+id/et_album_title"
            android:nextFocusRight="@+id/et_album_year"
            android:nextFocusUp="@+id/et_album_title"
            android:nextFocusDown="@+id/et_album_year"
            android:nextFocusForward="@+id/et_album_year"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/et_album_genre"
            app:layout_constraintEnd_toStartOf="@+id/et_album_year"
            app:layout_constraintStart_toEndOf="@+id/iv_album_cover"
            app:layout_constraintTop_toBottomOf="@+id/et_album_title" />

        <EditText
            android:id="@+id/et_album_year"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/album_year"
            android:importantForAutofill="no"
            android:inputType="date"
            android:maxLength="4"
            android:nextFocusLeft="@+id/et_album_artist"
            android:nextFocusRight="@+id/et_album_genre"
            android:nextFocusUp="@+id/et_album_artist"
            android:nextFocusDown="@+id/et_album_genre"
            android:nextFocusForward="@+id/et_album_genre"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/et_album_artist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_album_artist"
            app:layout_constraintTop_toTopOf="@+id/et_album_artist" />

        <AutoCompleteTextView
            android:id="@+id/et_album_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/album_genre"
            android:inputType="textCapSentences"
            android:nextFocusLeft="@+id/et_album_year"
            android:nextFocusRight="@+id/et_album_store"
            android:nextFocusUp="@+id/et_album_year"
            android:nextFocusDown="@+id/et_album_store"
            android:nextFocusForward="@+id/et_album_store"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/iv_album_cover"
            app:layout_constraintTop_toBottomOf="@+id/et_album_artist" />

        <TextView
            android:id="@+id/tv_album_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/iv_album_cover"
            app:layout_constraintStart_toStartOf="@+id/iv_album_cover"
            app:layout_constraintTop_toBottomOf="@+id/iv_album_cover" />

        <AutoCompleteTextView
            android:id="@+id/et_album_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/album_store"
            android:inputType="text"
            android:nextFocusLeft="@+id/et_album_genre"
            android:nextFocusRight="@+id/et_album_price"
            android:nextFocusUp="@+id/et_album_genre"
            android:nextFocusDown="@+id/et_album_price"
            android:nextFocusForward="@+id/et_album_price"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_album_length" />

        <EditText
            android:id="@+id/et_album_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/album_price"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:nextFocusLeft="@+id/et_album_store"
            android:nextFocusRight="@+id/et_album_currency"
            android:nextFocusUp="@+id/et_album_store"
            android:nextFocusDown="@+id/et_album_currency"
            android:nextFocusForward="@+id/et_album_currency"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/et_album_date"
            app:layout_constraintEnd_toStartOf="@+id/et_album_currency"
            app:layout_constraintStart_toEndOf="@+id/et_album_date"
            app:layout_constraintTop_toBottomOf="@+id/et_album_store"
            app:layout_constraintVertical_bias="1.0" />

        <AutoCompleteTextView
            android:id="@+id/et_album_currency"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:completionThreshold="0"
            android:ems="10"
            android:hint="@string/album_currency"
            android:importantForAutofill="no"
            android:inputType="text|textCapCharacters"
            android:nextFocusLeft="@+id/et_album_price"
            android:nextFocusRight="@+id/et_album_title"
            android:nextFocusUp="@+id/et_album_price"
            android:nextFocusDown="@+id/et_album_title"
            android:nextFocusForward="@+id/et_album_title"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLength="3"
            app:layout_constraintBottom_toBottomOf="@+id/et_album_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_album_price"
            app:layout_constraintTop_toTopOf="@+id/et_album_price"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/et_album_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:focusable="auto"
            android:hint="@string/album_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:nextFocusLeft="@+id/et_album_store"
            android:nextFocusRight="@+id/et_album_price"
            android:nextFocusUp="@+id/et_album_store"
            android:nextFocusDown="@+id/et_album_price"
            android:nextFocusForward="@+id/et_album_price"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/et_album_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_album_store" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_album_tracks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_album_date" />

        <ImageView
            android:id="@+id/iv_album_cover"
            android:layout_width="140dp"
            android:layout_height="144dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/album_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/album" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

