<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:tabGravity="fill"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_albums" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_lastfm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_lastfm" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_stats" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <View
        android:id="@+id/view_grayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="#808080" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:alpha="0"
        android:clickable="true"
        android:focusable="true"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_anchor="@+id/fab_camera"
        app:layout_anchorGravity="start|center"
        app:srcCompat="@drawable/ic_keyboard_white_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:alpha="0"
        android:clickable="true"
        android:focusable="true"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_anchor="@+id/fab"
        app:layout_anchorGravity="center|start"
        app:srcCompat="@drawable/ic_photo_camera_white_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="end|bottom"
        app:pressedTranslationZ="10dp"
        app:srcCompat="@drawable/ic_add_white_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>